# wjx-score-analysis

./: .gitignore  field_config.json  launcher.py  pyproject.toml  zhanpeng-toolbox.spec  新学员登记表.xlsx
.claude/skills/student-register/: SKILL.md  register_student.py
.claude/skills/wjx-score-analysis/: SKILL.md  extract_and_generate.py  template.html
.github/workflows/: build.yml
src/wjx_score/: __main__.py  analysis.py  cdp.py  chrome.py  cli.py  extraction.py  filters.py  register.py  rendering.py  server.py  template.html
src/wjx_score/static/: index.html
